--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -67,9 +67,11 @@ header .caixa_topo .redes_sociais li a:hover{
 }
 
 /*Body*/
+
 .imagem_index img{
     width: 100%;
-    margin: 0 auto;
+    opacity: 70%;
+    height: 400px;
 }
 
 
