--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -5,10 +5,18 @@ header{
     padding: 20px 0;
 }
 
+header .banner{
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    opacity: 30%;
+}
+
 header .caixa_topo{
     position: relative;
     width: 973px;
     margin: 0 auto;
+    
 }
 
 header .caixa_topo h1{
@@ -66,25 +74,93 @@ header .caixa_topo .redes_sociais li a:hover{
     border-style: solid;
 }
 
+header .caixa_topo .redes_sociais li .efeitos-pb{
+    opacity: 100%;
+}
+
+header .caixa_topo .redes_sociais li .efeitos-c{
+    opacity: 0%;
+}
+
+header .caixa_topo .redes_sociais li .efeitos-c:hover{
+    transition: 0.5s;
+    opacity: 100%;
+    border-bottom: 4px #DD2422;
+    border-style: solid;
+}
+
+header .caixa_topo .redes_sociais li #whattsapp{
+    position: absolute;
+    right: 0px;
+}
+
+header .caixa_topo .redes_sociais li #instagram{
+    position: absolute;
+    right: 70px;
+}
+
+header .caixa_topo .redes_sociais li #youtube{
+    position: absolute;
+    right: 140px;
+}
+
+header .caixa_topo .redes_sociais li #facebook{
+    position: absolute;
+    right: 210px;
+}
 /*Body*/
 
-.imagem_index img{
-    width: 100%;
-    opacity: 70%;
-    height: 400px;
+
+main .principal{
+    padding: 20px 0;
+    background: #FEFEFE;
+    width: 974px;
+    margin: 0 auto;
+    
+}
+
+main h1{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 22px;
+    text-align: center;
+    margin: 0 0 1em;
+}
+
+main p{
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    margin: 0 0 1em;
+
+}
+
+/*Rodapé*/
+
+footer{
+    background: url(../imagens/rodape/bg.jpg);
+    padding: 10px 0;
+    height: 250px;
 }
 
 
-/*Rodapé*/
-footer{
-    text-align: center;
-    background: url(../imagens/rodape/bg.jpg);
-    padding: 10px 0;
+footer .rodape{
+    position: relative;
+    width: 450px;
+    height: 250px;
+    margin: 0 auto;
+}
+
+footer img{
+    position: absolute;
+    top: 0px;
+    
 }
 
 footer .copyright{
+    position: absolute;
+    top: 125px;
     font-family: 'Lato', sans-serif;
     color: white;
-    font-size: 14px;
-    margin-top: 20px;
+    font-size: 18px;
+    left: 200px;
+    
 }
